--- a/build.gradle
+++ b/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile('com.h2database:h2') //인메모리 관계형 데이터베이스 -> 재시작할때마다 초기화. 테스트 용도
     compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.springframework.boot:spring-boot-starter-oauth2-client') //소셜 로그인 등 클라이언트 입장에서 소셜 기능 구현 시 필요 -> spring-security-oauth2-client, spring-security-oauth2-jose 기본 관리
+    compile('org.springframework.session:spring-session-jdbc')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
