--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-oauth2-client') //소셜 로그인 등 클라이언트 입장에서 소셜 기능 구현 시 필요 -> spring-security-oauth2-client, spring-security-oauth2-jose 기본 관리
     compile('org.springframework.session:spring-session-jdbc')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test') //스프링 시큐리티 테스트를 위한 여러 도구 지원
 }
