--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,15 @@ files:
   - source: / #CodeDeploy에서 전달해준 파일 중 destination으로 이동시킬 대상 지정 (루트 경로 -> 전체 파일)
     destination: /home/ec2-user/app/step2/zip/ #source에서 지정된 파일을 받을 위치. 이후 Jar를 실행하는 등은 destination에서 옮긴 파일들로 진행
     overwrite: yes #기존에 파일들이 있으면 덮어씀
+
+permissions: #CodeDeploy에서 EC2 넘겨준 파일들을 모두 ec2-user 권한을 갖도록 함
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+
+hooks: #CodeDeploy 배포 단계에서 실행할 명령어 지정
+  ApplicationStart: #ApplicationStart 단계에서
+    - location: deploy.sh #deploy.sh를
+      timeout: 60 #(스크립트 실행 60초 이상 수행되면 실패)
+      runas: ec2-user #ec2-user 권한으로 실행
